push avant mise en ligne

--- a/mentions-legales-bootstrap.html
+++ b/mentions-legales-bootstrap.html
@@ -90,7 +90,7 @@
                 <div class="ligne-decorative mx-auto mb-4"></div>
                 <p class="lead introduction-mentions">
                   <i class="fas fa-calendar-alt me-2"></i>
-                  En vigueur au 12 octobre 2024
+                  En vigueur au 15 juin 2025
                 </p>
               </div>
 
@@ -163,12 +163,11 @@
                 <div class="carte-hebergeur p-3 rounded-3">
                   <p class="texte-mentions mb-2">
                     <i class="fas fa-building me-2"></i>
-                    <strong>Société :</strong> Alwaysdata
+                    <strong>Société :</strong> github
                   </p>
                   <p class="texte-mentions mb-0">
                     <i class="fas fa-map-marker-alt me-2"></i>
-                    <strong>Adresse :</strong> 91 rue du Faubourg Saint Honoré -
-                    75008 Paris
+                    <strong>Adresse :</strong> 95 rue la boetie - 75008 Paris
                   </p>
                 </div>
               </div>
@@ -323,12 +322,6 @@
                   du Site, sans autorisation expresse de l'Editeur est
                   interdite.
                 </div>
-                <p class="texte-mentions mt-3 mb-0">
-                  <em>
-                    <i class="fas fa-info-circle me-2"></i>
-                    Ces mentions légales sont générées grâce à LegalPlace.
-                  </em>
-                </p>
               </div>
             </section>
           </div>
@@ -344,7 +337,7 @@
           <div class="col-lg-4 col-md-6 text-center text-md-start">
             <h5 class="mb-3"><i class="fas fa-user me-2"></i>Kevin Senasson</h5>
             <p class="mb-2">Développeur Junior</p>
-            <p class="mb-0">© 2024 Kevin Senasson. Tous droits réservés.</p>
+            <p class="mb-0">© 2025 Kevin Senasson. Tous droits réservés.</p>
           </div>
 
           <!-- Liens rapides -->
