--- a/index-bootstrap.html
+++ b/index-bootstrap.html
@@ -634,6 +634,7 @@
                   <ul class="liste-projets">
                     <li>Figma</li>
                     <li>Canva</li>
+                    <li>maquette papier</li>
                   </ul>
                 </div>
               </div>
@@ -1299,9 +1300,9 @@
                 spécialité SLAM dans ce tableau Excel interactif.
               </p>
               <a
-                href="img/8 - BTS SIO - Annexe 8-1 - Tableau de synthèse - Epreuve E4 - BTS SIO 2024.xlsx"
+                href="img/8 - BTS SIO - Annexe 8-1 - Tableau de synthèse - Epreuve E4 - BTS SIO 2024.pdf"
                 class="btn bouton-telechargement px-4 py-2"
-                download="8 - BTS SIO - Annexe 8-1 - Tableau de synthèse - Epreuve E4 - BTS SIO 2024.xlsx"
+                download="8 - BTS SIO - Annexe 8-1 - Tableau de synthèse - Epreuve E4 - BTS SIO 2024.pdf"
               >
                 <i class="fas fa-file-excel me-2"></i>Télécharger Excel
               </a>
@@ -1522,7 +1523,7 @@
           <div class="col-lg-4 col-md-6">
             <h5 class="mb-3"><i class="fas fa-user me-2"></i>Kevin Senasson</h5>
             <p class="mb-2">Développeur Junior</p>
-            <p class="mb-0">© 2024 Kevin Senasson. Tous droits réservés.</p>
+            <p class="mb-0">© 2025 Kevin Senasson. Tous droits réservés.</p>
           </div>
 
           <!-- Liens rapides -->
