replacement du footer au centre

--- a/index.html
+++ b/index.html
@@ -1518,7 +1518,7 @@
     <!-- Footer -->
     <footer class="pied-de-page bg-dark text-light py-4">
       <div class="container">
-        <div class="row g-4">
+        <div class="row g-4 justify-content-center text-center">
           <!-- Informations principales -->
           <div class="col-lg-4 col-md-6">
             <h5 class="mb-3"><i class="fas fa-user me-2"></i>Kevin Senasson</h5>
@@ -1530,7 +1530,7 @@
           <div class="col-lg-4 col-md-6">
             <h5 class="mb-3"><i class="fas fa-link me-2"></i>Liens rapides</h5>
             <ul class="list-unstyled">
-              <li class="mb-2">
+              <li class="mb-2 text-center">
                 <a
                   href="mentions-legales-bootstrap.html"
                   class="text-light text-decoration-none"
@@ -1538,8 +1538,8 @@
                   <i class="fas fa-file-alt me-1"></i>Mentions légales
                 </a>
               </li>
-              <li class="mb-2">
-                <div class="plan-site-container">
+              <li class="mb-2 text-center">
+                <div class="plan-site-container d-flex justify-content-center">
                   <a
                     href="#"
                     class="text-light text-decoration-none plan-site-toggle"
@@ -1655,7 +1655,7 @@
               <i class="fas fa-address-book me-2"></i>Contact & Réseaux
             </h5>
             <ul class="list-unstyled">
-              <li class="mb-2">
+              <li class="mb-2 text-center">
                 <a
                   href="mailto:kevin.senasson456@outlook.fr"
                   class="text-light text-decoration-none"
@@ -1663,7 +1663,7 @@
                   <i class="fas fa-envelope me-1"></i>Email
                 </a>
               </li>
-              <li class="mb-2">
+              <li class="mb-2 text-center">
                 <a
                   href="tel:+33682144351"
                   class="text-light text-decoration-none"
@@ -1674,7 +1674,9 @@
             </ul>
 
             <!-- Réseaux sociaux footer -->
-            <div class="liens-reseaux-footer d-flex gap-3 mt-3">
+            <div
+              class="liens-reseaux-footer d-flex justify-content-center gap-3 mt-3"
+            >
               <a
                 href="https://www.linkedin.com/feed/"
                 target="_blank"
