--- a/mentions-legales-bootstrap.html
+++ b/mentions-legales-bootstrap.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark barre-navigation fixed-top">
       <div class="container">
         <!-- Logo/Nom avec lien vers le portfolio -->
-        <a class="navbar-brand fw-bold" href="index-bootstrap.html">
+        <a class="navbar-brand fw-bold" href="index.html">
           <i class="fas fa-arrow-left me-2"></i>
           Retour au Portfolio
         </a>
@@ -290,10 +290,7 @@
                     <li class="contact-item mb-0">
                       <i class="fas fa-edit me-2"></i>
                       Depuis le
-                      <a
-                        href="index-bootstrap.html#contact"
-                        class="lien-contact"
-                      >
+                      <a href="index.html#contact" class="lien-contact">
                         formulaire de contact du portfolio
                       </a>
                     </li>
@@ -332,9 +329,9 @@
     <!-- Footer -->
     <footer class="pied-de-page bg-dark text-light py-5">
       <div class="container">
-        <div class="row g-4 justify-content-center">
+        <div class="row g-4 justify-content-center text-center">
           <!-- Informations principales -->
-          <div class="col-lg-4 col-md-6 text-center text-md-start">
+          <div class="col-lg-4 col-md-6">
             <h5 class="mb-3"><i class="fas fa-user me-2"></i>Kevin Senasson</h5>
             <p class="mb-2">Développeur Junior</p>
             <p class="mb-0">© 2025 Kevin Senasson. Tous droits réservés.</p>
@@ -344,29 +341,129 @@
           <div class="col-lg-4 col-md-6 text-center">
             <h5 class="mb-3"><i class="fas fa-link me-2"></i>Navigation</h5>
             <ul class="list-unstyled">
-              <li class="mb-2">
-                <a
-                  href="index-bootstrap.html"
-                  class="text-light text-decoration-none"
-                >
+              <li class="mb-2 text-center">
+                <a href="index.html" class="text-light text-decoration-none">
                   <i class="fas fa-home me-1"></i>Retour au Portfolio
                 </a>
               </li>
-              <li class="mb-2">
-                <a href="#" class="text-light text-decoration-none">
-                  <i class="fas fa-sitemap me-1"></i>Plan du site
-                </a>
+              <li class="mb-2 text-center">
+                <div class="plan-site-container d-flex justify-content-center">
+                  <a
+                    href="#"
+                    class="text-light text-decoration-none plan-site-toggle"
+                    id="planSiteToggle"
+                  >
+                    <i class="fas fa-sitemap me-1"></i>Plan du site
+                    <i class="fas fa-chevron-down ms-1 plan-site-arrow"></i>
+                  </a>
+
+                  <!-- Menu déroulant du plan de site -->
+                  <div class="plan-site-dropdown" id="planSiteDropdown">
+                    <div class="plan-site-content">
+                      <!-- Navigation principale -->
+                      <div class="plan-site-section">
+                        <h6 class="plan-site-title">
+                          <i class="fas fa-compass me-1"></i>Navigation
+                        </h6>
+                        <ul class="plan-site-links">
+                          <li>
+                            <a href="index.html#accueil"
+                              ><i class="fas fa-home me-1"></i>Accueil</a
+                            >
+                          </li>
+                          <li>
+                            <a href="index.html#formation"
+                              ><i class="fas fa-graduation-cap me-1"></i
+                              >Formation</a
+                            >
+                          </li>
+                          <li>
+                            <a href="index.html#projets"
+                              ><i class="fas fa-project-diagram me-1"></i
+                              >Projets</a
+                            >
+                          </li>
+                          <li>
+                            <a href="index.html#apropos" data-scroll="veille"
+                              ><i class="fas fa-search me-1"></i>Veille
+                              Technologique</a
+                            >
+                          </li>
+                          <li>
+                            <a href="index.html#synthese"
+                              ><i class="fas fa-chart-line me-1"></i>Synthèse</a
+                            >
+                          </li>
+                          <li>
+                            <a href="index.html#contact"
+                              ><i class="fas fa-envelope me-1"></i>Contact</a
+                            >
+                          </li>
+                        </ul>
+                      </div>
+
+                      <!-- Pages annexes -->
+                      <div class="plan-site-section">
+                        <h6 class="plan-site-title">
+                          <i class="fas fa-external-link-alt me-1"></i>Pages
+                        </h6>
+                        <ul class="plan-site-links">
+                          <li>
+                            <a href="projets-bootstrap.html"
+                              ><i class="fas fa-folder me-1"></i>Page Projets</a
+                            >
+                          </li>
+                          <li>
+                            <a href="mentions-legales-bootstrap.html"
+                              ><i class="fas fa-file-alt me-1"></i>Mentions
+                              Légales</a
+                            >
+                          </li>
+                        </ul>
+                      </div>
+
+                      <!-- Liens externes -->
+                      <div class="plan-site-section">
+                        <h6 class="plan-site-title">
+                          <i class="fas fa-share-alt me-1"></i>Liens externes
+                        </h6>
+                        <ul class="plan-site-links">
+                          <li>
+                            <a
+                              href="https://www.linkedin.com/feed/"
+                              target="_blank"
+                              ><i class="fab fa-linkedin me-1"></i>LinkedIn</a
+                            >
+                          </li>
+                          <li>
+                            <a
+                              href="https://github.com/tamdaz/cruml"
+                              target="_blank"
+                              ><i class="fab fa-github me-1"></i>GitHub</a
+                            >
+                          </li>
+                          <li>
+                            <a href="img/cv kevin senasson.pdf" target="_blank"
+                              ><i class="fas fa-file-pdf me-1"></i>Télécharger
+                              CV</a
+                            >
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </li>
             </ul>
           </div>
 
           <!-- Contact -->
-          <div class="col-lg-4 col-md-12 text-center text-lg-start">
+          <div class="col-lg-4 col-md-12">
             <h5 class="mb-3">
               <i class="fas fa-address-book me-2"></i>Contact
             </h5>
             <ul class="list-unstyled">
-              <li class="mb-2">
+              <li class="mb-2 text-center">
                 <a
                   href="mailto:kevin.senasson456@outlook.fr"
                   class="text-light text-decoration-none"
@@ -374,7 +471,7 @@
                   <i class="fas fa-envelope me-1"></i>Email
                 </a>
               </li>
-              <li class="mb-2">
+              <li class="mb-2 text-center">
                 <a
                   href="tel:+33682144351"
                   class="text-light text-decoration-none"
@@ -386,7 +483,7 @@
 
             <!-- Réseaux sociaux -->
             <div
-              class="liens-reseaux-footer d-flex justify-content-center justify-content-lg-start gap-3 mt-3"
+              class="liens-reseaux-footer d-flex justify-content-center gap-3 mt-3"
             >
               <a
                 href="https://www.linkedin.com/feed/"
@@ -450,7 +547,109 @@
             }
           });
         });
+
+        // Initialisation du plan de site
+        initialiserPlanDeSite();
       });
+
+      // Fonction pour gérer le plan de site
+      function initialiserPlanDeSite() {
+        const toggleButton = document.getElementById("planSiteToggle");
+        const dropdown = document.getElementById("planSiteDropdown");
+
+        if (!toggleButton || !dropdown) return;
+
+        // Gestion du clic sur le bouton toggle
+        toggleButton.addEventListener("click", function (e) {
+          e.preventDefault();
+          e.stopPropagation();
+
+          const isOpen = dropdown.classList.contains("show");
+
+          if (isOpen) {
+            fermerPlanDeSite();
+          } else {
+            ouvrirPlanDeSite();
+          }
+        });
+
+        // Fermer le menu si on clique ailleurs
+        document.addEventListener("click", function (e) {
+          if (
+            !toggleButton.contains(e.target) &&
+            !dropdown.contains(e.target)
+          ) {
+            fermerPlanDeSite();
+          }
+        });
+
+        // Gestion des liens avec ancres internes (navigation principale)
+        const liensInternes = dropdown.querySelectorAll('a[href^="#"]');
+        liensInternes.forEach((lien) => {
+          lien.addEventListener("click", function (e) {
+            e.preventDefault();
+            const targetId = this.getAttribute("href");
+
+            // Fermer le menu
+            fermerPlanDeSite();
+
+            // Naviguer vers la section
+            setTimeout(() => {
+              window.location.href = "index.html" + targetId;
+            }, 100);
+          });
+        });
+
+        // Gestion des liens avec scroll personnalisé (veille)
+        const liensAvecScroll = dropdown.querySelectorAll("a[data-scroll]");
+        liensAvecScroll.forEach((lien) => {
+          lien.addEventListener("click", function (e) {
+            e.preventDefault();
+            const href = this.getAttribute("href");
+
+            // Fermer le menu
+            fermerPlanDeSite();
+
+            // Naviguer vers la page avec l'ancre
+            setTimeout(() => {
+              window.location.href = href;
+            }, 100);
+          });
+        });
+
+        // Gestion des liens vers d'autres pages
+        const liensExternes = dropdown.querySelectorAll(
+          'a[href]:not([href^="#"]):not([data-scroll])'
+        );
+        liensExternes.forEach((lien) => {
+          lien.addEventListener("click", function () {
+            // Fermer le menu lors du clic sur un lien externe
+            setTimeout(() => {
+              fermerPlanDeSite();
+            }, 100);
+          });
+        });
+      }
+
+      function ouvrirPlanDeSite() {
+        const toggleButton = document.getElementById("planSiteToggle");
+        const dropdown = document.getElementById("planSiteDropdown");
+
+        if (toggleButton && dropdown) {
+          toggleButton.classList.add("active");
+          dropdown.classList.add("show");
+        }
+      }
+
+      function fermerPlanDeSite() {
+        const toggleButton = document.getElementById("planSiteToggle");
+        const dropdown = document.getElementById("planSiteDropdown");
+
+        if (toggleButton && dropdown) {
+          toggleButton.classList.remove("active");
+          dropdown.classList.remove("show");
+        }
+      }
     </script>
   </body>
 </html>
