--- a/projets-bootstrap.html
+++ b/projets-bootstrap.html
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="index-bootstrap.html">
+        <a class="navbar-brand fw-bold" href="index.html">
           <i class="fas fa-code me-2"></i>Kevin Senasson
         </a>
 
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index-bootstrap.html#accueil">
+              <a class="nav-link" href="index.html#accueil">
                 <i class="fas fa-home me-1"></i>Accueil
               </a>
             </li>
@@ -56,7 +56,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index-bootstrap.html#contact">
+              <a class="nav-link" href="index.html#contact">
                 <i class="fas fa-envelope me-1"></i>Contact
               </a>
             </li>
@@ -505,7 +505,7 @@
                 Découvrez d'autres aspects de mon profil et n'hésitez pas à me
                 contacter pour discuter de vos projets !
               </p>
-              <a href="index-bootstrap.html" class="btn btn-retour btn-lg">
+              <a href="index.html" class="btn btn-retour btn-lg">
                 <i class="fas fa-home me-2"></i>Retour au portfolio
               </a>
             </div>
@@ -517,16 +517,16 @@
     <!-- Footer -->
     <footer class="footer py-4">
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-6">
             <p class="mb-0">© 2025 Kevin Senasson. Tous droits réservés.</p>
           </div>
-          <div class="col-md-6 text-md-end">
-            <div class="social-links">
-              <a href="#" class="social-link me-3">
+          <div class="col-md-6">
+            <div class="social-links d-flex justify-content-center gap-3">
+              <a href="#" class="social-link">
                 <i class="fab fa-linkedin"></i>
               </a>
-              <a href="#" class="social-link me-3">
+              <a href="#" class="social-link">
                 <i class="fab fa-github"></i>
               </a>
               <a href="mentions-legales-bootstrap.html" class="footer-link">
