ajouts des techno pour la veille + prix + description appareils

--- a/index.html
+++ b/index.html
@@ -863,8 +863,19 @@
                   />
                 </div>
                 <div class="carte-innovation-info p-3">
-                  <h4>Microsoft HoloLens</h4>
-                  <span class="badge-date">2016</span>
+                  <h4>Microsoft HoloLens 2</h4>
+                  <p class="text-muted small mb-2">
+                    Casque de réalité mixte professionnel permettant de
+                    superposer des hologrammes 3D dans l'environnement réel.
+                    Idéal pour la formation, la maintenance industrielle et la
+                    collaboration à distance.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <span class="badge-date">2019</span>
+                    <span class="badge bg-success">3 500€</span>
+                  </div>
                 </div>
               </a>
             </div>
@@ -883,8 +894,19 @@
                   />
                 </div>
                 <div class="carte-innovation-info p-3">
-                  <h4>Magic Leap One</h4>
-                  <span class="badge-date">2018</span>
+                  <h4>Magic Leap 2</h4>
+                  <p class="text-muted small mb-2">
+                    Dispositif de réalité mixte ultra-léger avec suivi oculaire
+                    avancé. Permet l'interaction naturelle avec des objets
+                    virtuels pour les applications médicales, industrielles et
+                    créatives.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <span class="badge-date">2022</span>
+                    <span class="badge bg-warning text-dark">2 300€</span>
+                  </div>
                 </div>
               </a>
             </div>
@@ -904,7 +926,17 @@
                 </div>
                 <div class="carte-innovation-info p-3">
                   <h4>Apple Vision Pro</h4>
-                  <span class="badge-date">2024</span>
+                  <p class="text-muted small mb-2">
+                    Ordinateur spatial révolutionnaire combinant réalité
+                    virtuelle et augmentée. Interface contrôlée par les yeux,
+                    les mains et la voix pour une expérience immersive inédite.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <span class="badge-date">2024</span>
+                    <span class="badge bg-danger">4 000€</span>
+                  </div>
                 </div>
               </a>
             </div>
@@ -924,7 +956,17 @@
                 </div>
                 <div class="carte-innovation-info p-3">
                   <h4>Ray-Ban Meta Smart Glasses</h4>
-                  <span class="badge-date">2023</span>
+                  <p class="text-muted small mb-2">
+                    Lunettes connectées stylées intégrant caméra, assistant IA
+                    et capture photo/vidéo. Parfaites pour le partage de contenu
+                    en temps réel et l'assistance vocale discrète.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <span class="badge-date">2023</span>
+                    <span class="badge bg-info">300€</span>
+                  </div>
                 </div>
               </a>
             </div>
@@ -944,7 +986,140 @@
                 </div>
                 <div class="carte-innovation-info p-3">
                   <h4>Google Glass Enterprise</h4>
-                  <span class="badge-date">2019</span>
+                  <p class="text-muted small mb-2">
+                    Lunettes connectées professionnelles avec affichage tête
+                    haute. Optimisées pour les environnements industriels,
+                    permettent l'accès mains-libres aux informations et
+                    instructions.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <span class="badge-date">2019</span>
+                    <span class="badge bg-secondary">1 000€</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <a
+                href="https://www.meta.com/fr/quest/"
+                target="_blank"
+                class="carte-innovation text-decoration-none"
+              >
+                <div class="carte-innovation-image">
+                  <img
+                    src="img/innovations/metaquest.jpg"
+                    class="img-fluid"
+                    alt="Meta Quest"
+                  />
+                </div>
+                <div class="carte-innovation-info p-3">
+                  <h4>Meta Quest 3</h4>
+                  <p class="text-muted small mb-2">
+                    Casque VR/AR tout-en-un avec technologie de réalité mixte.
+                    Offre des expériences immersives pour le gaming, le fitness,
+                    la socialisation et le travail collaboratif.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <span class="badge-date">2024</span>
+                    <span class="badge bg-primary">550€</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <a
+                href="https://www.picoxr.com/fr/"
+                target="_blank"
+                class="carte-innovation text-decoration-none"
+              >
+                <div class="carte-innovation-image">
+                  <img
+                    src="img/innovations/pico_4ultra.png"
+                    class="img-fluid"
+                    alt="ByteDance Pico 4"
+                  />
+                </div>
+                <div class="carte-innovation-info p-3">
+                  <h4>ByteDance Pico 4</h4>
+                  <p class="text-muted small mb-2">
+                    Casque VR autonome haute performance avec écrans 4K+ et
+                    tracking précis. Excellente alternative pour les jeux
+                    immersifs, le fitness virtuel et les applications
+                    professionnelles.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <span class="badge-date">2022</span>
+                    <span class="badge bg-info">600€</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <a
+                href="https://varjo.com/products/aero/"
+                target="_blank"
+                class="carte-innovation text-decoration-none"
+              >
+                <div class="carte-innovation-image">
+                  <img
+                    src="img/innovations/varjoaero.jpg"
+                    class="img-fluid"
+                    alt="VARJO Aero"
+                  />
+                </div>
+                <div class="carte-innovation-info p-3">
+                  <h4>VARJO Aero</h4>
+                  <p class="text-muted small mb-2">
+                    Casque VR professionnel avec la plus haute résolution du
+                    marché. Conçu pour la simulation industrielle,
+                    l'architecture, la formation médicale et le développement
+                    produit.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <span class="badge-date">2021</span>
+                    <span class="badge bg-warning text-dark">2 000€</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <a
+                href="https://www.spectacles.com/"
+                target="_blank"
+                class="carte-innovation text-decoration-none"
+              >
+                <div class="carte-innovation-image">
+                  <img
+                    src="img/innovations/snap.jpg"
+                    class="img-fluid"
+                    alt="Snapchat Spectacles AR"
+                  />
+                </div>
+                <div class="carte-innovation-info p-3">
+                  <h4>Snapchat Spectacles AR</h4>
+                  <p class="text-muted small mb-2">
+                    Lunettes de réalité augmentée développées pour les
+                    créateurs. Permettent de créer et partager des expériences
+                    AR immersives directement depuis les lunettes.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <span class="badge-date">2024</span>
+                    <span class="badge bg-success">380€</span>
+                  </div>
                 </div>
               </a>
             </div>
