ajout titre veille + modif

--- a/index.html
+++ b/index.html
@@ -662,9 +662,19 @@
     <!-- Section Veille Technologique -->
     <section id="veille" class="section-veille py-5">
       <div class="container">
-        <h2 class="text-center mb-5 titre-section" data-aos="fade-down">
+        <h2 class="text-center mb-3 titre-section" data-aos="fade-down">
           <i class="fas fa-earth-americas me-2"></i>Veille Technologique
         </h2>
+
+        <!-- Sujet de la veille -->
+        <div class="text-center mb-5" data-aos="fade-up" data-aos-delay="100">
+          <h3
+            class="sujet-veille text-center px-4 py-3 rounded-4 d-inline-block"
+          >
+            <i class="fas fa-bullseye me-2"></i>
+            La réalité augmentée dans les métiers techniques de demain
+          </h3>
+        </div>
 
         <!-- Définition et outils -->
         <div class="row mb-5">
@@ -733,75 +743,96 @@
                     <tr>
                       <td><strong>Durée de la veille</strong></td>
                       <td>
-                        Veille continue depuis 10 mois (septembre 2024 - juin
+                        Veille continue depuis 10 mois (septembre 2024 - juillet
                         2025)
                       </td>
                       <td><span class="badge bg-primary">10 mois</span></td>
                     </tr>
                     <tr>
                       <td><strong>Fréquence</strong></td>
-                      <td>Consultation des Sources hebdomadaires</td>
+                      <td>
+                        Consultation des sources hebdomadaires et veille
+                        continue
+                      </td>
                       <td><span class="badge bg-success">7j/7</span></td>
                     </tr>
                     <tr>
                       <td><strong>Sources principales</strong></td>
                       <td>
                         <ul class="mb-0">
-                          <li>article de presse</li>
-                          <li>chatGPT</li>
-                          <li>realite-virtuelle.com</li>
-                          <li>lemondeinformatique.fr</li>
-                          <li>robot-magazine.fr</li>
-                          <li>wanteed.fr</li>
+                          <li>Microsoft.com (HoloLens 2)</li>
+                          <li>Apple.com (Vision Pro)</li>
+                          <li>Meta.com (Quest 3, Ray-Ban Meta)</li>
+                          <li>Magicleap.com (Magic Leap 2)</li>
+                          <li>Google.com (Glass Enterprise)</li>
+                          <li>Picoxr.com (Pico 4)</li>
+                          <li>Varjo.com (VARJO Aero)</li>
+                          <li>Spectacles.com (Snapchat AR)</li>
+                          <li>Réalité-virtuelle.com</li>
+                          <li>Lemondeinformatique.fr</li>
+                          <li>Robot-magazine.fr</li>
+                          <li>ChatGPT pour analyses techniques</li>
                         </ul>
                       </td>
-                      <td><span class="badge bg-info">6 sources</span></td>
+                      <td><span class="badge bg-info">12 sources</span></td>
                     </tr>
                     <tr>
-                      <td><strong>Articles analysés</strong></td>
+                      <td><strong>Innovations analysées</strong></td>
                       <td>
-                        Lecture et analyse approfondie d'articles techniques
+                        9 dispositifs majeurs : HoloLens 2, Magic Leap 2, Vision
+                        Pro, Ray-Ban Meta, Google Glass, Quest 3, Pico 4, VARJO
+                        Aero, Spectacles AR
                       </td>
                       <td>
                         <span class="badge bg-warning text-dark"
-                          >20 articles</span
+                          >9 innovations</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td><strong>Technologies suivies</strong></td>
-                      <td>Réalité Augmentée, IA/ML, WebXR, Computer Vision</td>
                       <td>
-                        <span class="badge bg-secondary">4 domaines</span>
+                        Réalité Augmentée, Réalité Mixte, VR, IA/ML, Computer
+                        Vision, Tracking oculaire
+                      </td>
+                      <td>
+                        <span class="badge bg-secondary">6 domaines</span>
                       </td>
                     </tr>
                     <tr>
                       <td><strong>Méthodologie</strong></td>
                       <td>
                         <ol class="mb-0">
-                          <li>Collecte d'informations (flux RSS)</li>
-                          <li>Filtrage et tri par pertinence</li>
-                          <li>Analyse critique des sources</li>
-                          <li>Synthèse et classification</li>
-                          <li>Identification des tendances</li>
+                          <li>
+                            Collecte d'informations (sites officiels, presse
+                            spécialisée)
+                          </li>
+                          <li>Analyse comparative des innovations</li>
+                          <li>Évaluation critique des sources</li>
+                          <li>Synthèse et classification par catégories</li>
+                          <li>Identification des tendances émergentes</li>
+                          <li>Documentation des prix et dates de sortie</li>
                         </ol>
                       </td>
-                      <td><span class="badge bg-danger">5 étapes</span></td>
+                      <td><span class="badge bg-danger">6 étapes</span></td>
                     </tr>
                     <tr>
                       <td><strong>Outils utilisés</strong></td>
                       <td>
-                        Notion (prise de notes), recherche Google, chatGPT,
+                        Notion (organisation), ChatGPT (analyses), recherche
+                        documentaire, veille concurrentielle, sites
+                        constructeurs
                       </td>
-                      <td><span class="badge bg-purple">3 outils</span></td>
+                      <td><span class="badge bg-purple">5+ outils</span></td>
                     </tr>
                     <tr>
                       <td><strong>Livrables produits</strong></td>
                       <td>
-                        Rapport de synthèse, cartographie des innovations,
-                        présentation des tendances émergentes
+                        Galerie d'innovations interactive, fiches produits
+                        détaillées, analyse comparative prix/performances,
+                        synthèse des tendances 2024-2025
                       </td>
-                      <td><span class="badge bg-primary">3 livrables</span></td>
+                      <td><span class="badge bg-primary">4 livrables</span></td>
                     </tr>
                   </tbody>
                 </table>
@@ -812,7 +843,7 @@
                 <div class="col-md-3 text-center">
                   <div class="indicateur-veille p-3 rounded h-100">
                     <i class="fas fa-clock text-primary fa-2x mb-2"></i>
-                    <h5>2 heures/semaine</h5>
+                    <h5>3 heures/semaine</h5>
                     <small class="text-white">Temps dédié hebdomadaire</small>
                   </div>
                 </div>
@@ -826,15 +857,15 @@
                 <div class="col-md-3 text-center">
                   <div class="indicateur-veille p-3 rounded h-100">
                     <i class="fas fa-trending-up text-warning fa-2x mb-2"></i>
-                    <h5>6</h5>
-                    <small class="text-white">Tendances suivies</small>
+                    <h5>9</h5>
+                    <small class="text-white">Innovations analysées</small>
                   </div>
                 </div>
                 <div class="col-md-3 text-center">
                   <div class="indicateur-veille p-3 rounded h-100">
                     <i class="fas fa-star text-info fa-2x mb-2"></i>
-                    <h5>Durée</h5>
-                    <small class="text-white">10 mois</small>
+                    <h5>Gamme</h5>
+                    <small class="text-white">300€ - 4000€</small>
                   </div>
                 </div>
               </div>
@@ -1283,6 +1314,185 @@
                       protection des données
                     </li>
                   </ul>
+                </div>
+              </div>
+            </div>
+
+            <!-- Sources -->
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#sourcesVeille"
+                >
+                  <i class="fas fa-link me-2"></i>
+                  Sources documentaires utilisées
+                </button>
+              </h2>
+              <div id="sourcesVeille" class="accordion-collapse collapse">
+                <div class="accordion-body">
+                  <div class="row g-3">
+                    <div class="col-md-6">
+                      <h5 class="text-primary mb-3">
+                        <i class="fas fa-building me-2"></i>Sites officiels des
+                        constructeurs
+                      </h5>
+                      <ul class="list-unstyled">
+                        <li class="mb-2">
+                          <a
+                            href="https://www.microsoft.com/fr-fr/hololens"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Microsoft.com - HoloLens 2
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://www.apple.com/fr/apple-vision-pro/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Apple.com - Vision Pro
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://www.meta.com/fr/quest/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Meta.com - Quest 3
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://about.meta.com/realitylabs/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Meta.com - Ray-Ban Meta
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://www.magicleap.com/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Magicleap.com - Magic Leap 2
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://www.google.com/glass/start/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Google.com - Glass Enterprise
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://www.picoxr.com/fr/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Picoxr.com - Pico 4
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://varjo.com/products/aero/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Varjo.com - VARJO Aero
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://www.spectacles.com/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Spectacles.com - Snapchat AR
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-md-6">
+                      <h5 class="text-success mb-3">
+                        <i class="fas fa-newspaper me-2"></i>Sites spécialisés
+                        et outils
+                      </h5>
+                      <ul class="list-unstyled">
+                        <li class="mb-2">
+                          <a
+                            href="https://www.realite-virtuelle.com/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Réalité-virtuelle.com
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://www.lemondeinformatique.fr/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Lemondeinformatique.fr
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://www.robot-magazine.fr/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i
+                            >Robot-magazine.fr
+                          </a>
+                        </li>
+                        <li class="mb-2">
+                          <a
+                            href="https://chat.openai.com/"
+                            target="_blank"
+                            class="text-decoration-none"
+                          >
+                            <i class="fas fa-external-link-alt me-2"></i>ChatGPT
+                            - Analyses techniques
+                          </a>
+                        </li>
+                      </ul>
+
+                      <div class="mt-4 p-3 bg-light rounded">
+                        <h6 class="text-dark mb-2">
+                          <i class="fas fa-info-circle me-2"></i>Méthodologie de
+                          recherche
+                        </h6>
+                        <p class="text-dark small mb-0">
+                          Consultation croisée des sources officielles et
+                          spécialisées pour garantir la fiabilité des
+                          informations techniques, prix et dates de sortie.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
