conversion des images jpeg et png en webp pour diminution du poids

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="col-lg-4 col-md-6 mb-4 mb-lg-0" data-aos="fade-right">
                 <div class="text-center">
                   <img
-                    src="img/avatar.jpg"
+                    src="img/avatar.webp"
                     alt="Avatar de Kevin Senasson"
                     class="img-fluid image-avatar rounded-4 shadow-lg"
                   />
@@ -252,7 +252,7 @@
                     <div class="carousel-item active">
                       <div class="hobby-slide-container">
                         <img
-                          src="img/thumb-1920-984589.jpg"
+                          src="img/thumb-1920-984589.webp"
                           class="d-block w-100 image-hobby-fullheight"
                           alt="Jeux d'échecs"
                         />
@@ -280,7 +280,7 @@
                     <div class="carousel-item">
                       <div class="hobby-slide-container">
                         <img
-                          src="img/web-development-application-design-coding-and-programming-on-laptop-and-smartphone-concept-with-programming-language-and-program-code-and-layout-on-screen-vector.jpg"
+                          src="img/web-development-application-design-coding-and-programming-on-laptop-and-smartphone-concept-with-programming-language-and-program-code-and-layout-on-screen-vector.webp"
                           class="d-block w-100 image-hobby-fullheight"
                           alt="Développement"
                         />
@@ -336,7 +336,7 @@
                     <div class="carousel-item">
                       <div class="hobby-slide-container">
                         <img
-                          src="img/The-Best-Gaming-Mice-of-2024.jpg"
+                          src="img/The-Best-Gaming-Mice-of-2024.webp"
                           class="d-block w-100 image-hobby-fullheight"
                           alt="Gaming"
                         />
@@ -424,7 +424,7 @@
           <!-- Image de l'école -->
           <div class="col-lg-4 col-md-6 mb-4 mb-lg-0" data-aos="fade-right">
             <img
-              src="img/photo.jpg"
+              src="img/photo.webp"
               alt="Logo école IRIS Nice"
               class="img-fluid image-ecole rounded-4 shadow-lg"
             />
@@ -527,7 +527,7 @@
             <div class="swiper-slide">
               <div class="carte-projet h-100 shadow-lg">
                 <img
-                  src="img/frontend.jpg"
+                  src="img/frontend.webp"
                   class="carte-projet-image"
                   alt="Frontend Development"
                 />
@@ -550,7 +550,7 @@
             <div class="swiper-slide">
               <div class="carte-projet h-100 shadow-lg">
                 <img
-                  src="img/backend.jpg"
+                  src="img/backend.webp"
                   class="carte-projet-image"
                   alt="Backend Development"
                 />
@@ -573,7 +573,7 @@
             <div class="swiper-slide">
               <div class="carte-projet h-100 shadow-lg">
                 <img
-                  src="img/basededonnées.jpg"
+                  src="img/basededonnées.webp"
                   class="carte-projet-image"
                   alt="Base de données"
                 />
@@ -621,7 +621,7 @@
             <div class="swiper-slide">
               <div class="carte-projet h-100 shadow-lg">
                 <img
-                  src="img/maquettage.jpg"
+                  src="img/maquettage.webp"
                   class="carte-projet-image"
                   alt="Maquettage"
                 />
@@ -888,7 +888,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/microsofthololens.jpg"
+                    src="img/microsofthololens.webp"
                     class="img-fluid"
                     alt="Microsoft HoloLens"
                   />
@@ -919,7 +919,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/magicleapone.jpg"
+                    src="img/magicleapone.webp"
                     class="img-fluid"
                     alt="Magic Leap"
                   />
@@ -950,7 +950,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/applevisionpro.jpg"
+                    src="img/applevisionpro.webp"
                     class="img-fluid"
                     alt="Apple Vision Pro"
                   />
@@ -980,7 +980,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/rayban.jpg"
+                    src="img/rayban.webp"
                     class="img-fluid"
                     alt="Ray-Ban Meta"
                   />
@@ -1041,7 +1041,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/innovations/metaquest.jpg"
+                    src="img/innovations/metaquest.webp"
                     class="img-fluid"
                     alt="Meta Quest"
                   />
@@ -1102,7 +1102,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/innovations/varjoaero.jpg"
+                    src="img/innovations/varjoaero.webp"
                     class="img-fluid"
                     alt="VARJO Aero"
                   />
@@ -1133,7 +1133,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/innovations/snap.jpg"
+                    src="img/innovations/snap.webp"
                     class="img-fluid"
                     alt="Snapchat Spectacles AR"
                   />
