remise des image image fichier

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             <div class="swiper-slide">
               <div class="carte-projet h-100 shadow-lg">
                 <img
-                  src="img/analyse.png"
+                  src="img/analyse.webp"
                   class="carte-projet-image"
                   alt="Analyse"
                 />
@@ -1041,7 +1041,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/innovations/metaquest.webp"
+                    src="img/metaquest.webp"
                     class="img-fluid"
                     alt="Meta Quest"
                   />
@@ -1071,7 +1071,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/innovations/pico_4ultra.png"
+                    src="img/pico_4ultra.webp"
                     class="img-fluid"
                     alt="ByteDance Pico 4"
                   />
@@ -1102,7 +1102,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/innovations/varjoaero.webp"
+                    src="img/varjoaero.webp"
                     class="img-fluid"
                     alt="VARJO Aero"
                   />
@@ -1133,7 +1133,7 @@
               >
                 <div class="carte-innovation-image">
                   <img
-                    src="img/innovations/snap.webp"
+                    src="img/snap.webp"
                     class="img-fluid"
                     alt="Snapchat Spectacles AR"
                   />
