--- a/projets-bootstrap.html
+++ b/projets-bootstrap.html
@@ -108,7 +108,7 @@
             <div class="card projet-card h-100">
               <div class="card-img-container">
                 <img
-                  src="img/Capture d'écran 2025-07-09 175914.png"
+                  src="img/Capture d'écran 2025-07-09 175914.webp"
                   class="card-img-top"
                   alt="Portfolio Kevin Senasson"
                 />
@@ -150,7 +150,7 @@
             <div class="card projet-card h-100">
               <div class="card-img-container">
                 <img
-                  src="img/Capture d'écran 2025-06-07 221514.png"
+                  src="img/Capture d'écran 2025-06-07 221514.webp"
                   class="card-img-top"
                   alt="Autre projet Frontend"
                 />
@@ -182,6 +182,45 @@
               </div>
             </div>
           </div>
+
+          <!-- Nouveau Frontend Project -->
+          <div
+            class="col-lg-6 col-xl-4"
+            data-aos="fade-up"
+            data-aos-delay="300"
+          >
+            <div class="card projet-card h-100">
+              <div class="card-img-container">
+                <img
+                  src="img/Capture d'écran 2025-12-16 173225.png"
+                  class="card-img-top"
+                  alt="Nouveau Projet Frontend"
+                />
+                <div class="card-overlay">
+                  <i class="fas fa-eye"></i>
+                </div>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">
+                  <i class="fas fa-code me-2"></i>Mediastock
+                </h5>
+                <p class="card-text flex-grow-1">
+                  Développement d'une application web interactive avec HTML5,
+                  CSS3 et JavaScript et PHP permettant la gestion du matériel
+                  informatique d'un campus
+                </p>
+                <div class="projet-tags mb-3">
+                  <span class="badge bg-primary me-1">HTML5</span>
+                  <span class="badge bg-info me-1">CSS3</span>
+                  <span class="badge bg-warning text-dark">JavaScript</span>
+                  <span class="badge bg-success">PHP</span>
+                </div>
+                <a href="#" target="_blank" class="btn btn-projet">
+                  <i class="fab fa-github me-2"></i>Voir plus
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -203,7 +242,7 @@
             <div class="card projet-card h-100">
               <div class="card-img-container">
                 <img
-                  src="img/Capture d'écran 2025-07-09 180516.png"
+                  src="img/Capture d'écran 2025-07-09 180516.webp"
                   class="card-img-top"
                   alt="Projet Backend"
                 />
@@ -229,6 +268,43 @@
                   target="_blank"
                   class="btn btn-projet"
                 >
+                  <i class="fab fa-github me-2"></i>Voir plus
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Nouveau Backend Project -->
+          <div
+            class="col-lg-6 col-xl-4"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
+            <div class="card projet-card h-100">
+              <div class="card-img-container">
+                <img
+                  src="img/Capture d'écran 2025-11-28 104012.png"
+                  class="card-img-top"
+                  alt="Nouveau Projet Backend"
+                />
+                <div class="card-overlay">
+                  <i class="fas fa-eye"></i>
+                </div>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">
+                  <i class="fas fa-database me-2"></i>ObsiLock
+                </h5>
+                <p class="card-text flex-grow-1">
+                  Création d'une application de coffre fort numérique sécurisée
+                </p>
+                <div class="projet-tags mb-3">
+                  <span class="badge bg-success me-1">HTML5</span>
+                  <span class="badge bg-primary me-1">CSS3</span>
+                  <span class="badge bg-info me-1">PHP</span>
+                  <span class="badge bg-danger me-1">JAVA FX</span>
+                </div>
+                <a href="#" target="_blank" class="btn btn-projet">
                   <i class="fab fa-github me-2"></i>Voir plus
                 </a>
               </div>
@@ -340,7 +416,7 @@
             <div class="card projet-card h-100">
               <div class="card-img-container">
                 <img
-                  src="img/Capture d'écran 2025-06-07 212217.png"
+                  src="img/Capture d'écran 2025-06-07 212217.webp"
                   class="card-img-top"
                   alt="Maquette Portfolio Figma"
                 />
@@ -379,7 +455,7 @@
             <div class="card projet-card h-100">
               <div class="card-img-container">
                 <img
-                  src="img/Capture d'écran 2025-06-07 210426.png"
+                  src="img/Capture d'écran 2025-06-07 210426.webp"
                   class="card-img-top"
                   alt="Maquette Yummy Figma"
                 />
@@ -410,7 +486,77 @@
             </div>
           </div>
 
-          <!-- Figma CineZone -->
+          <!-- Nouvelle Maquette 1 -->
+          <div
+            class="col-lg-6 col-xl-4"
+            data-aos="fade-up"
+            data-aos-delay="500"
+          >
+            <div class="card projet-card h-100">
+              <div class="card-img-container">
+                <img
+                  src="img/Capture d'écran 2025-12-16 173225.png"
+                  class="card-img-top"
+                  alt="Maquette Design Moderne"
+                />
+                <div class="card-overlay">
+                  <i class="fas fa-eye"></i>
+                </div>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">
+                  <i class="fas fa-palette me-2"></i>Figma Mediastock
+                </h5>
+                <p class="card-text flex-grow-1">
+                  maquette d'un application web permettant la gesrtion du
+                  matériel informatique d'un campus avec un design moderne et
+                  épuré
+                </p>
+                <div class="projet-tags mb-3">
+                  <span class="badge bg-purple">Figma</span>
+                </div>
+                <a href="#" target="_blank" class="btn btn-projet">
+                  <i class="fab fa-figma me-2"></i>Voir plus
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Nouvelle Maquette 2 -->
+          <div
+            class="col-lg-6 col-xl-4"
+            data-aos="fade-up"
+            data-aos-delay="600"
+          >
+            <div class="card projet-card h-100">
+              <div class="card-img-container">
+                <img
+                  src="img/Capture d'écran 2025-11-28 104012.png"
+                  class="card-img-top"
+                  alt="Maquette Application Mobile"
+                />
+                <div class="card-overlay">
+                  <i class="fas fa-eye"></i>
+                </div>
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">
+                  <i class="fas fa-mobile-alt me-2"></i>Figma ObsiLock
+                </h5>
+                <p class="card-text flex-grow-1">
+                  maquettage d'un coffre fort numérique sécurisé
+                </p>
+                <div class="projet-tags mb-3">
+                  <span class="badge bg-purple">Figma</span>
+                </div>
+                <a href="#" target="_blank" class="btn btn-projet">
+                  <i class="fab fa-figma me-2"></i>Voir plus
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Figma Horizon Location -->
           <div
             class="col-lg-6 col-xl-4"
             data-aos="fade-up"
@@ -419,7 +565,7 @@
             <div class="card projet-card h-100">
               <div class="card-img-container">
                 <img
-                  src="img/Capture d'écran 2025-06-07 210849.png"
+                  src="img/Capture d'écran 2025-06-07 210849.webp"
                   class="card-img-top"
                   alt="Maquette CineZone Figma"
                 />
@@ -459,7 +605,7 @@
             <div class="card projet-card h-100">
               <div class="card-img-container">
                 <img
-                  src="img/Capture d'écran 2025-06-07 211010.png"
+                  src="img/Capture d'écran 2025-06-07 211010.webp"
                   class="card-img-top"
                   alt="Maquette Horizon Location Figma"
                 />
